log
Fri 24 Mar 2023 05:58:37 PM UTC: 
 tests:  0|6
total_score: 0/70
996e8bd
Fri 24 Mar 2023 05:59:20 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97fd6b9
Fri 24 Mar 2023 06:02:47 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
63fb646
Fri 24 Mar 2023 06:03:48 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7599e5e
Fri 24 Mar 2023 06:04:08 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
da0ae03
Fri 24 Mar 2023 06:08:21 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ef60909
Fri 24 Mar 2023 06:10:52 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
a499fe8
Fri 24 Mar 2023 06:12:55 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
ab6ddcd
Fri 24 Mar 2023 06:15:00 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
3ab5a89
Fri 24 Mar 2023 06:16:20 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
d40104a
Fri 24 Mar 2023 06:17:12 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:116:12: error: variable ‘guardarDato’ set but not used [-Werror=unused-but-set-variable]
  116 |     void * guardarDato;
      |            ^~~~~~~~~~~
list.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
84805de
Fri 24 Mar 2023 06:17:40 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:116:12: error: variable ‘guardarDato’ set but not used [-Werror=unused-but-set-variable]
  116 |     void * guardarDato;
      |            ^~~~~~~~~~~
list.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8dd7285
Fri 24 Mar 2023 06:19:33 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  12|0
total_score: 70/70
0735640
